# FastCG

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  FastCG.sln  GENERATE_VS2010.bat  README.md  UpgradeLog.XML  disable_cross_compiling.bat  disable_cross_compiling.sh  enable_android_cross_compiling.bat  enable_android_cross_compiling.sh  format_sources.bat  format_sources.sh  log4cpp.properties  shell_wrapper.bat  shell_wrapper.sh
FastCG/: CMakeLists.txt
FastCG/assets/materials/: OpaqueBumpedDiffuse.material  OpaqueBumpedSpecular.material  OpaqueDiffuse.material  OpaqueSolidColor.material  OpaqueSpecular.material  Skybox.material  TransparentBumpedDiffuse.material  TransparentBumpedSpecular.material  TransparentDiffuse.material  TransparentSolidColor.material  TransparentSpecular.material
FastCG/assets/prefabs/: skybox.prefab
FastCG/assets/shaders/: AmbientOcclusion.glsl  FastCG.glsl  Fog.glsl  ImGui.frag  ImGui.glsl  ImGui.vert  ImGuiConstants.glsl  Instance.glsl  InstanceConstants.glsl  Lighting.glsl  LightingConstants.glsl  Material.glsl  Noise.glsl  Scene.glsl  SceneConstants.glsl  Shadow.glsl  Skybox.frag  Skybox.vert
FastCG/include/FastCG/: AABB.h  Application.h  AssetSystem.h  AssetSystem.inc  Base64.h  BaseApplication.h  BaseBuffer.h  BaseGraphicsSystem.h  BaseGraphicsSystem.inc  BaseLineStrip.h  BaseMaterial.h  BaseMaterialDefinition.h  BaseMesh.h  BaseMesh.inc  BasePoints.h  BaseRenderingContext.h  BaseRenderingSystem.h  BaseRenderingSystem.inc  BaseShader.h  BaseTexture.h  BaseWorldRenderer.h  BaseWorldRenderer.inc  Behaviour.h  BinaryStream.h  BinaryStream.inc  Camera.h  CollectionUtils.h  CollectionUtils.inc  Colors.h  Component.h  ComponentRegistry.h  ConstantBuffer.h  DebugMenuSystem.h  DefaultRenderBatchStrategy.h  DeferredRenderingStrategy.h  DeferredWorldRenderer.h  DirectionalLight.h  Directory.h  Directory.inc  Enums.h  (+111 more)
FastCG/src/: Application.cpp  AssetSystem.cpp  BaseApplication.cpp  BaseLineStrip.cpp  BaseMesh.cpp  BasePoints.cpp  BaseRenderingSystem.cpp  BaseTexture.cpp  Behaviour.cpp  Camera.cpp  Colors.cpp  Component.cpp  DebugMenuSystem.cpp  DeferredRenderingStrategy.cpp  DeferredWorldRenderer.cpp  DirectionalLight.cpp  Directory.cpp  File.cpp  FileReader.cpp  FileWriter.cpp  FirstPersonCameraController.cpp  FlyCameraController.cpp  FlyController.cpp  Font.cpp  FontRegistry.cpp  ForwardRenderingStrategy.cpp  ForwardWorldRenderer.cpp  GameObject.cpp  GameObjectDumper.cpp  GameObjectLoader.cpp  ImGuiRenderer.cpp  ImGuiSystem.cpp  Input.cpp  InputSystem.cpp  Light.cpp  LineRenderer.cpp  LineStrip.cpp  Material.cpp  MaterialBasedMeshBatchingStrategy.cpp  MaterialBasedRenderBatchStrategy.cpp  (+45 more)
FastCG/src/Assets/: AssetSystem.cpp
FastCG/src/Core/: Colors.cpp
FastCG/src/Debug/: DebugMenuSystem.cpp
FastCG/src/Graphics/: ShaderImporter.cpp  TextureLoader.cpp  TextureLoaderDDS.cpp  TextureLoaderKTX.cpp  TextureLoaderPlain.cpp
FastCG/src/Input/: InputSystem.cpp
FastCG/src/Platform/: BaseApplication.cpp  Timer.cpp
FastCG/src/Rendering/: Camera.cpp  DeferredWorldRenderer.cpp  DirectionalLight.cpp  Fog.cpp  Light.cpp  Mesh.cpp  (+11 more)
dependencies/: CMakeLists.txt
dependencies/ImGuiFileDialog/: CMakeLists.txt
dependencies/ImGuizmo/: CMakeLists.txt
dependencies/SPIRV-Cross/: CMakeLists.txt  README.md
dependencies/VulkanMemoryAllocator/: CMakeLists.txt
dependencies/android_native_app_glue/: CMakeLists.txt
dependencies/assimp_301/: assimp_301.vcxproj  assimp_301.vcxproj.filters
dependencies/astcenc/: CMakeLists.txt
dependencies/basisu/: CMakeLists.txt
dependencies/dfdutils/: CMakeLists.txt
dependencies/freeglut/: .cproject  .project  CMakeLists.txt
dependencies/freeglut_281/: .cproject  .project  freeglut_281.vcxproj  freeglut_281.vcxproj.filters
dependencies/freetype_2411/: freetype.vcxproj  freetype.vcxproj.filters
dependencies/gl3w/: gl3w.c
dependencies/glew/: .cproject  .project  CMakeLists.txt
dependencies/glew_190/: .cproject  .project  glew_190.vcxproj  glew_190.vcxproj.filters
dependencies/glext/: .project
dependencies/glm/: .project  CMakeLists.txt
dependencies/glm_0943/: .project
dependencies/gtest/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/ktx/: CMakeLists.txt
dependencies/libpng_161/: .cproject  .project  libpng_161.vcxproj  libpng_161.vcxproj.filters
dependencies/log4cpp/: .cproject  .project  CMakeLists.txt
dependencies/messagebox-x11/: CMakeLists.txt
dependencies/rapidjson/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
dependencies/tinyobj_loader_c/: CMakeLists.txt
dependencies/zlib/: CMakeLists.txt
dependencies/zlib_127/: .cproject  .project  zlib_127.vcxproj  zlib_127.vcxproj.filters
examples/: CMakeLists.txt
examples/bump_mapping/: CMakeLists.txt
examples/deferred_rendering/: CMakeLists.txt
examples/matrix_multiply/: CMakeLists.txt
examples/pcss/: CMakeLists.txt
examples/ssao/: CMakeLists.txt
samples/: CMakeLists.txt
samples/bsplines/: bsplines.vcxproj  bsplines.vcxproj.filters
samples/bump_mapping/: CMakeLists.txt
samples/bumpmapping/: .cproject  .project  assimpLog.txt  bumpmapping.vcxproj  bumpmapping.vcxproj.filters
samples/bumpmapping2/: bumpmapping2.vcxproj  bumpmapping2.vcxproj.filters
samples/colorchecker/: .cproject  .project  ColorCheckerApplication.cpp  ColorCheckerApplication.h  Config.h  colorchecker.vcxproj  colorchecker.vcxproj.filters  main.cpp
samples/deferred_rendering/: CMakeLists.txt
samples/deferredrendering/: deferredrendering.vcxproj  deferredrendering.vcxproj.filters
samples/deferredshading/: assimpLog.txt  deferredshading.vcxproj  deferredshading.vcxproj.filters
samples/hdr/: CMakeLists.txt
samples/matrix_multiply/: CMakeLists.txt
samples/modelimport/: modelimport.vcxproj  modelimport.vcxproj.filters
samples/pcss/: CMakeLists.txt
samples/ssao/: CMakeLists.txt  ssao.vcxproj  ssao.vcxproj.filters
src/colorchecker/: CMakeLists.txt  ColorCheckerApplication.cpp  ColorCheckerApplication.h  Config.cpp.in  main.cpp
src/core/: CMakeLists.txt  FileReader.cpp  MathF.cpp  Random.cpp
(+967 files in other folders)
