cmake_minimum_required(VERSION 3.8)

if(FASTCG_GRAPHICS_SYSTEM STREQUAL "OpenGL")
    add_subdirectory(glew)
endif()
add_subdirectory(glm)
add_subdirectory(imgui)
if(FASTCG_PLATFORM STREQUAL "Linux")
    add_subdirectory(messagebox-x11)
endif()
add_subdirectory(rapidjson)
add_subdirectory(stb)
add_subdirectory(tinyobj_loader_c)
if(FASTCG_GRAPHICS_SYSTEM STREQUAL "Vulkan")
	add_subdirectory(SPIRV-Cross)
    add_subdirectory(VulkanMemoryAllocator)
endif()