cmake_minimum_required(VERSION 3.20)

if(FASTCG_PLATFORM STREQUAL "Android")
    add_subdirectory(android_native_app_glue)
endif()
add_subdirectory(astcenc)
add_subdirectory(basisu)
add_subdirectory(dfdutils)
if(FASTCG_GRAPHICS_SYSTEM STREQUAL "OpenGL" AND NOT FASTCG_PLATFORM STREQUAL "Android")
    add_subdirectory(glew)
endif()
add_subdirectory(glm)
add_subdirectory(imgui)
add_subdirectory(ImGuiFileDialog)
add_subdirectory(ktx)
if(FASTCG_PLATFORM STREQUAL "Linux")
    add_subdirectory(messagebox-x11)
endif()
add_subdirectory(rapidjson)
add_subdirectory(stb)
add_subdirectory(tinyobj_loader_c)
if(FASTCG_GRAPHICS_SYSTEM STREQUAL "Vulkan")
    # use local spirv-cross on Linux
    if (NOT FASTCG_PLATFORM STREQUAL "Linux")
	    add_subdirectory(SPIRV-Cross)
    endif()
    add_subdirectory(VulkanMemoryAllocator)
endif()
add_subdirectory(zlib)